--- a/key2go/src/User/Components/SideBar.css
+++ b/key2go/src/User/Components/SideBar.css
@@ -24,6 +24,32 @@
     color: #ffffff;
   }
   
+
+  #sidebar-container {
+    height: 100vh;
+    width: 250px;
+    background-color: #333;
+    color: white;
+  }
+  
+  .pro-sidebar {
+    height: 100%;
+    background-color: #222 !important;
+  }
+  
+  .menu-toggle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .menu-toggle svg {
+    font-size: 24px;
+    color: white;
+  }
+  
   .pro-sidebar .pro-menu .pro-menu-item:hover {
     background-color: #44446f;
     color: #ffcc00;
