--- a/key2go/src/User/Components/Header.css
+++ b/key2go/src/User/Components/Header.css
@@ -28,7 +28,7 @@
   }
   
   .brand-title {
-    color: #ff4000;
+    color: #8acdff;
     font-size: 36px;
     font-family: monospace;
     font-weight: bold;
@@ -71,7 +71,8 @@
   }
   
   .login-btn:hover {
-    background-color: #28a745;
+    background-color: #beffcd;
+    color: black;
   }
   
   /* Dropdown Styling */
