--- a/key2go/src/User/Components/CarCard.css
+++ b/key2go/src/User/Components/CarCard.css
@@ -1,4 +1,4 @@
-.car-card-container {
+/* .car-card-container {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
@@ -44,4 +44,26 @@
     color: #ff4000;
     font-weight: bold;
   }
-  
+   */
+/* CarCard.css */
+.car-card {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: center;
+  width: 200px;
+  margin: 20px;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+
+.car-card:hover {
+  transform: scale(1.05);
+}
+
+.car-image {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
